ui: fixes + small device enhancement (#319)
* Fix deployment date overlaping title

* Charts & Deployments filters small device UI

* Fix main-header small device padding

* Add filtersOpen declaration

* Fix chart-details padding

--- a/src/ui/src/app/chart-details/chart-details.component.scss
+++ b/src/ui/src/app/chart-details/chart-details.component.scss
@@ -18,7 +18,7 @@ $icon-height: 150px;
     }
 
     &__content {
-      padding: 0 1em;
+      padding: 0 2em;
       max-width: $layout-max-width;
       margin: auto;
       margin-top: -$icon-height / 2;
@@ -77,7 +77,7 @@ $icon-height: 150px;
     margin: auto;
     display: flex;
     flex-direction: column-reverse;
-    padding: 0 1em 1em 1em;
+    padding: 0 2em 2em 2em;
   }
 
   @include mappy-bp(medium) {
